<resources>
    <string name="app_name">EvCollect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Firebase Account</string>
    <string name="nav_header_subtitle">userFirebase@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Connecter</string>
    <string name="Disconnect">Déconnecter</string>
    <string name="menu_home">Home</string>
    <string name="menu_Collecteurs">Collecteurs</string>
    <string name="menu_Formulaires">Formulaires</string>
    <string name="menu_Langue">Langue</string>
    <string name="menu_Sombre">Mode Sombre</string>
    <string name="menu_Map">Maps</string>
    <string name="mapbox_token">pk.eyJ1Ijoibm91aGFmYWlkaSIsImEiOiJja2NyemJrYjcwZmU0MzBvZXU0c201Y24xIn0.uy6wtrR69qte51BmyrTw7w</string>
    <string name="home_second">Home Second</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="id">id</string>
    <string name="name">Name</string>
    <string name="DateCreated">DateCreated</string>
    <string name="DateModified">DateModified</string>
    <string name="Description">Description</string>
    <string name="ResourceType">ResourceType</string>
    <string name="DescribeUrl">DescribeUrl</string>
    <string name="save">Save App</string>
    <string name="deleteApp">Are you sure, you want to delete
it.</string>
    <string name="deleteForm">Are you sure, you want to delete
it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
