<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_collecteur"
android:icon="@drawable/ic_apps_black_24dp"
            android:title="@string/menu_Collecteurs" />
        <item
            android:id="@+id/nav_slideshow"
android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/menu_Formulaires" />
        <item
            android:id="@+id/nav_Maps"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_Map" />
        <item
            android:id="@+id/nav_Langue"
           android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/menu_Langue" />
        <item
            android:id="@+id/nav_Sombre"
           android:icon="@drawable/ic_brightness_3_black_24dp"
            android:title="@string/menu_Sombre" />

    </group>
</menu>
